--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div id="loader"></div>
     <!-- Header -->
     <nav>
-        <h1 class="brand">NOIHSE</h1>
-        <ul>
+        <h1 class="brand animate fadeInLeft">NOIHSE</h1>
+        <ul class="animate fadeInRight">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="about.html">A propos</a></li>
@@ -40,7 +40,7 @@
         <div class="slides-wrapper">
             <div class="slide" id="slide1">
                 <div class="slide-overlay">
-                    <div class="caption">
+                    <div class="caption animate fadeInDown">
                         <div class="caption-overlay">
                             <h1>Création Visuelle</h1>
                             <p>
@@ -56,7 +56,7 @@
             </div>
             <div class="slide" id="slide2">
                 <div class="slide-overlay">
-                    <div class="caption">
+                    <div class="caption animate fadeInDown">
                         <h1>Développement Web</h1>
                         <p>
                             Faites connaitre votre entreprise et Elargissez votre portée à l'international avec des sites web dynamiques et attrayants
@@ -71,7 +71,7 @@
             </div>
             <div class="slide" id="slide3">
                 <div class="slide-overlay">
-                    <div class="caption">
+                    <div class="caption animate fadeInDown">
                         <h1>Hygiène et Sécurité Environnement</h1>
                         <p>
                             Redonnez à votre environnement son éclat, nous vous proposons un service de nettoyage et entretien de qualité ! Besoin d'un
@@ -90,11 +90,11 @@
     <!--  -->
 
     <!-- Services -->
-    <div class="service-container">
+    <div class="service-container scroll-animations">
         <h2>Découvrez nos services</h2>
-        <div class="service-wrapper revealOnScroll" data-animation="lightSpeedIn" data-timeout="400">
+        <div class="service-wrapper">
             <!-- pack service 1 -->
-            <div class="pack" id="pack1">
+            <div class="pack animated" id="pack1">
                 <!-- <img src="img/bulb-dark-hearts-170781.jpg" alt="pack-img-name"> -->
                 <div class="overlay">
                     <div class="text">
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <!-- pack service 2 -->
-            <div class="pack" id="pack2">
+            <div class="pack animated" id="pack2">
                 <!-- <img src="img/color-cogs.jpg" alt="pack-img-name"> -->
                 <div class="overlay">
                     <div class="text">
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <!-- pack service 3 -->
-            <div class="pack" id="pack3">
+            <div class="pack animated" id="pack3">
                 <!-- <img src="img/bucket-building-cleaning-756883.jpg" alt="pack-img-name"> -->
                 <div class="overlay">
                     <div class="text">
@@ -143,7 +143,7 @@
                 </div>
             </div>
             <!-- pack service 4 -->
-            <div class="pack" id="pack4">
+            <div class="pack animated" id="pack4">
                 <!-- <img src="img/colored-pencils.jpg" alt="pack-img-name"> -->
                 <div class="overlay">
                     <div class="text">
@@ -156,7 +156,7 @@
                 </div>
             </div>
             <!-- pack service 5 -->
-            <div class="pack" id="pack5">
+            <div class="pack animated" id="pack5">
                 <!-- <img src="img/action-adult-boots-209230.jpg" alt="pack-img-name"> -->
                 <div class="overlay">
                     <div class="text">
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <!-- pack service 6 -->
-            <div class="pack" id="pack6">
+            <div class="pack animated" id="pack6">
                 <!-- <img src="img/blur-board-game-challenge-209712.jpg" alt="pack-img-name"> -->
                 <div class="overlay">
                     <div class="text">
@@ -182,7 +182,7 @@
         </div>
     </div><!--  -->
     <!-- About -->
-    <!-- 
+    <!--
     <div class="about">
         <div class="about-company fadeIn">
             <div>
