--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <!-- Services -->
     <div class="service-container scroll-animations">
-        <h2>Découvrez nos services</h2>
+        <h2 class="rouge animated fadeInLeft">Découvrez nos services</h2>
         <div class="service-wrapper">
             <!-- pack service 1 -->
             <div class="pack animated" id="pack1">
@@ -211,9 +211,9 @@
             </div>
     </div>   -->
     <!-- Contact -->
-    <div class="contact-section hide">
+    <div class="contact-section animated fadeInDownBig">
         <div class="container">
-            <h2>Où nous trouver</h2>
+            <h2 class="rouge ">Où nous trouver</h2>
             <!-- <p>NOIHSE est située ...</p> -->
             <div class="map">
                 <iframe src="https://maps.google.com/maps?q=NOIHSE&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0"
