--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
                     marginwidth="0"></iframe>
             </div>
         </div>
-        <div class="container-contact">
+        <div class="container-contact animated fadeIn">
             <div class="left-pad">
-                <h3>Contactez-nous</h3>
+                <h3 class="rouge">Contactez-nous</h3>
                 <ul class="contact-pad">
                     <li>
                         <span><i class="fa fa-address"></i>Addresse :</span> Cocody Palmeraie Bessikoi, Non loin de la pharmacie
@@ -244,7 +244,7 @@
                 </ul>
             </div>
             <div class="right-pad">
-                <h3>Envoyez-nous un message</h3>
+                <h3 class="rouge animated fadeIn">Envoyez-nous un message</h3>
                 <form action="">
                     <div class="form-group">
                         <input type="text" placeholder="Nom">
