--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="slide-overlay">
                     <div class="caption animate fadeInDown">
                         <div class="caption-overlay">
-                            <h1>Création Visuelle</h1>
+                            <h1 class="rouge">Création Visuelle</h1>
                             <p>
                                 Passez vos messages et informations sur des affiches, flyers dans le format de votre souhait en quantité illimitée
                             </p>
@@ -49,7 +49,7 @@
             <div class="slide" id="slide2">
                 <div class="slide-overlay">
                     <div class="caption animate fadeInDown">
-                        <h1>Développement Web</h1>
+                        <h1 class="rouge">Développement Web</h1>
                         <p>
                             Faites connaitre votre entreprise et Elargissez votre portée à l'international avec des sites web dynamiques et attrayants
                             !
@@ -64,7 +64,7 @@
             <div class="slide" id="slide3">
                 <div class="slide-overlay">
                     <div class="caption animate fadeInDown">
-                        <h1>Hygiène et Sécurité Environnement</h1>
+                        <h1 class="rouge">Hygiène et Sécurité Environnement</h1>
                         <p>
                             Redonnez à votre environnement son éclat, nous vous proposons un service de nettoyage et entretien de qualité ! Besoin d'un
                             nettoyage rapide et efficace de vos locaux ?
