--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="slide" id="slide1">
                 <div class="slide-overlay">
                     <div class="caption animate fadeInDown">
-                        <div class="caption-overlay">
+                        <div class="caption-overlay overlay1">
                             <h1 class="rouge">Création Visuelle</h1>
                             <p>
                                 Passez vos messages et informations sur des affiches, flyers dans le format de votre souhait en quantité illimitée
