--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <!-- Container contact -->
     </div><!-- Contact -->
     <footer>
-        <p>Copyright &copy; 2019</p>
+        <p>Copyright &copy; NOIHSE 2019. Tous droits réservés.</p>
     </footer>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/script.js"></script>
