added font awesome

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="img/logo-ico.png">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lato|Lobster|Open+Sans+Condensed:300|Playfair+Display" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
     <link rel="stylesheet" href="js/animate.css">
 </head>
@@ -225,21 +226,21 @@
                 <h3 class="rouge">Contactez-nous</h3>
                 <ul class="contact-pad">
                     <li>
-                        <span><i class="fa fa-address"></i>Addresse :</span> Cocody Palmeraie Bessikoi, Non loin de la pharmacie
+                        <span class="rouge"><i class="fa fa-map-marker-alt"></i>Addresse :</span> Cocody Palmeraie Bessikoi, Non loin de la pharmacie
                         St Viateur
                     </li>
                     <li>
-                        <span><i class="fa fa-telephone"></i>Téléphone :</span> 07 71 91 62
+                        <span class="rouge"><i class="fa fa-address-card"></i>Téléphone :</span> 07 71 91 62
                     </li>
                     <li>
-                        <span><i class="fa fa-telephone"></i>Téléphone :</span> 45 25 96 55
+                        <span class="rouge"><i class="fa fa-address-book"></i>Téléphone :</span> 45 25 96 55
                     </li>
 
                     <li>
-                        <span><i class="fa fa-phone"></i>Fixe :</span> 22 46 76 49
+                        <span class="rouge"><i class="fa fa-phone"></i>Fixe :</span> 22 46 76 49
                     </li>
                     <li>
-                        <span><i class="fa fa-email"></i>Email :</span> noihse1@gmail.com
+                        <span class="rouge"><i class="fa fa-enveloppe"></i>Email :</span> noihse1@gmail.com
                     </li>
                 </ul>
             </div>
