--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <span class="rouge"><i class="fa fa-phone"></i>Fixe :</span> 22 46 76 49
                     </li>
                     <li>
-                        <span class="rouge"><i class="fa fa-enveloppe"></i>Email :</span> noihse1@gmail.com
+                        <span class=""><i class=" rouge fa fa-enveloppe"></i>Email :</span> noihse1@gmail.com
                     </li>
                 </ul>
             </div>
