--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
                     </li>
 
                     <li>
-                        <span class="rouge"><i class="fa fa-phone"></i>Fixe :</span> 22 46 76 49
+                        <span class=""><i class=" rouge fa fa-phone"></i>Fixe :</span> 22 46 76 49
                     </li>
                     <li>
-                        <span class=""><i class=" rouge fa fa-enveloppe"></i>Email :</span> noihse1@gmail.com
+                        <span class=""><i class=" rouge fa fa-envelope"></i>Email :</span> noihse1@gmail.com
                     </li>
                 </ul>
             </div>
