minor update on fontawesome

--- a/index.html
+++ b/index.html
@@ -226,21 +226,21 @@
                 <h3 class="rouge">Contactez-nous</h3>
                 <ul class="contact-pad">
                     <li>
-                        <span class="rouge"><i class="fa fa-map-marker-alt"></i>Addresse :</span> Cocody Palmeraie Bessikoi, Non loin de la pharmacie
+                        <i class="rouge fa fa-map-marker-alt"></i><span class="">Addresse :</span> Cocody Palmeraie Bessikoi, Non loin de la pharmacie
                         St Viateur
                     </li>
                     <li>
-                        <span class="rouge"><i class="fa fa-address-card"></i>Téléphone :</span> 07 71 91 62
+                        <i class="rouge fa fa-address-card"></i><span class="">Téléphone :</span> 07 71 91 62
                     </li>
                     <li>
-                        <span class="rouge"><i class="fa fa-address-book"></i>Téléphone :</span> 45 25 96 55
+                        <i class="rouge fa fa-address-book"></i><span class="rouge">Téléphone :</span> 45 25 96 55
                     </li>
 
                     <li>
-                        <span class=""><i class=" rouge fa fa-phone"></i>Fixe :</span> 22 46 76 49
+                        <i class=" rouge fa fa-phone"></i><span class=""> Fixe :</span> 22 46 76 49
                     </li>
                     <li>
-                        <span class=""><i class=" rouge fa fa-envelope"></i>Email :</span> noihse1@gmail.com
+                        <i class="rouge fa fa-envelope"></i><span class="bold"> Email :</span> noihse1@gmail.com
                     </li>
                 </ul>
             </div>
