--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <h3 class="rouge">Contactez-nous</h3>
                 <ul class="contact-pad">
                     <li>
-                        <i class="rouge fa fa-map-marker-alt"></i><span class="bold">Addresse    :</span> Cocody Palmeraie Bessikoi, Non loin de la pharmacie
+                        <i class="rouge fa fa-map-marker-alt"></i><span class="bold">Addresse    :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie
                         St Viateur
                     </li>
                     <li>
