--- a/index.html
+++ b/index.html
@@ -265,18 +265,18 @@
             <div class="right-pad">
                 <h3 class="rouge animated fadeIn">Envoyez-nous un message</h3>
                 <form action="">
-                    <div class="form-group">
+                    <div class="form-group group">
                         <input type="text" placeholder="Nom">
                         <input type="email" placeholder="Email">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group group">
                         <input type="text" placeholder="Entreprise">
                         <input type="text" placeholder="Objet du message">
                     </div>
                     <div class="form-group">
-                        <textarea name="" id="" cols="30" rows="10">Message</textarea>
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group groupelebouton">
                         <button type="submit" class="button">
                             <span>Envoyer</span>
                         </button>
