changed nav links href

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <nav>
         <h1 class="brand animate fadeInLeft">NOIHSE</h1>
         <ul class="animate fadeInRight">
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="about.html">A propos</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">A propos</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <!-- Showcase -->
@@ -83,7 +83,7 @@
     <!--  -->
 
     <!-- Services -->
-    <div class="service-container scroll-animations">
+    <div class="service-container scroll-animations" id="services">
         <h2 class="rouge animated fadeInLeft">Découvrez nos services</h2>
         <div class="service-wrapper">
             <!-- pack service 1 -->
@@ -212,7 +212,7 @@
             </div>
     </div>   -->
     <!-- Contact -->
-    <div class="contact-section animated fadeInDownBig">
+    <div class="contact-section animated fadeInDownBig" id="contact">
         <div class="container">
             <h2 class="rouge ">Où nous trouver</h2>
             <!-- <p>NOIHSE est située ...</p> -->
