--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +16,7 @@
 </head>
 
 <body>
-    <div id="loader"></div>
+    <!-- <div id="loader"></div> -->
     <!-- Header -->
     <nav>
         <h1 class="brand animate fadeInLeft">NOIHSE</h1>
