--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
     <nav>
         <h1 class="brand animate fadeInLeft">NOIHSE</h1>
         <ul class="animate fadeInRight">
-            <li><a href="index.html" class="active">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="about.html">A propos</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -173,105 +173,7 @@
             </div>
         </div>
     </div><!--  -->
-    <!-- About -->
-    <!--
-    <div class="about">
-        <div class="about-company fadeIn">
-            <div>
-                <img src="img/bulb-dark-hearts-170781.jpg" alt="" class="image">
-            </div>
-            <div class="text">
-                <h2>A propos de NOIHSE</h2>
-                <p>
-                    NOIHSE est une entreprise spécialisée dans les domaines de conception visuelle et de nettoyage industriel. Ce qui caractérise
-                    le plus l'entreprise c'est le sérieux de ses dirigeants car tous sont issus d'une formation de qualiticien.
-                </p>
-            </div>
-        </div> -->
-    <!-- <div class="about-numbers fadeIn">
-                <h3>Quelque chiffres</h3>
-                <div class="row">
-                    <div class="number">
-                        <span>129</span>
-                        Clients satisfaits
-                    </div>
-                    <div class="number">
-                        <span>29</span>
-                        Années d'expérience
-                    </div>
-                    <div class="number">
-                        <span>32</span>
-                        Employés dévoués
-                    </div>
-                </div>
-            </div>
-            <div class="about-contact">
-                <p>Besoin d'une prestation de qualité ?</p>
-                <a href="contact.html">Contactez-nous !</a>
-            </div>
-    </div>   -->
-    <!-- Contact -->
-    <div class="contact-section animated fadeInDownBig" id="contact">
 
-
-        <div class="container-contact animated fadeIn">
-            <div class="left-pad">
-                <h3 class="rouge">Contactez-nous</h3>
-                <ul class="contact-pad">
-                    <li>
-                        <i class="rouge fa fa-map-marker-alt"></i>
-                        <span class="next-icon">
-                            <span class="bold">Addresse    :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie St Viateur
-                        </span>
-
-                    </li>
-                    <li>
-                        <i class="rouge fa fa-address-card"></i>
-                        <span class="next-icon">
-                            <span class="bold">Téléphone :</span> 07 71 91 62
-                        </span>
-
-                    </li>
-
-                    <li>
-                        <i class=" rouge fa fa-phone"></i>
-                        <span class="next-icon">
-                            <span class="bold"> Fixe :</span> 22 46 76 49
-                        </span>
-
-                    </li>
-                    <li>
-                        <i class="rouge fa fa-envelope"></i>
-                        <span class="next-icon">
-                            <span class="bold"> Email     :</span> noihse1@gmail.com
-                        </span>
-
-                    </li>
-                </ul>
-            </div>
-            <div class="right-pad">
-                <h3 class="rouge animated fadeIn">Envoyez-nous un message</h3>
-                <form action="">
-                    <div class="form-group group">
-                        <input type="text" placeholder="Nom">
-                        <input type="email" placeholder="Email">
-                    </div>
-                    <div class="form-group group">
-                        <input type="text" placeholder="Entreprise">
-                        <input type="text" placeholder="Objet du message">
-                    </div>
-                    <div class="form-group">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-                    </div>
-                    <div class="form-group groupelebouton">
-                        <button type="submit" class="button">
-                            <span>Envoyer</span>
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <!-- Container contact -->
     </div><!-- Contact -->
     <footer>
         <p>Copyright &copy; NOIHSE 2019. Tous droits réservés.</p>
