--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Amane Hosanna">
+    <meta name="refresh" content="30">
     <title>NOIHSE | Bienvenue</title>
 
     <link rel="icon" href="img/logo-ico.png">
