--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
         <h1 class="brand animate fadeInLeft">NOIHSE</h1>
         <ul class="animate fadeInRight">
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="services.html" class="active">Services</a></li>
             <li><a href="about.html">A propos</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
