--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +11,20 @@
     <link rel="icon" href="img/logo-ico.png">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lato|Lobster|Open+Sans+Condensed:300|Playfair+Display" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
 
     <link rel="stylesheet" href="js/animate.css">
 </head>
 
 <body>
-    <!-- <div id="loader"></div> -->
+    <div class="warning">
+        <p>
+            <i class="fa fa-tools"></i>
+            PAGE EN MAINTENANCE
+        </p>
+
+    </div>
     <!-- Header -->
     <nav>
         <h1 class="brand animate fadeInLeft">NOIHSE</h1>
@@ -44,7 +52,8 @@
                     <li>
                         <i class="rouge fa fa-map-marker-alt"></i>
                         <span class="next-icon">
-                            <span class="bold">Addresse    :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie St Viateur
+                            <span class="bold">Addresse :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie
+                            St Viateur
                         </span>
 
                     </li>
@@ -72,7 +81,7 @@
                     <li>
                         <i class="rouge fa fa-envelope"></i>
                         <span class="next-icon">
-                            <span class="bold"> Email     :</span> noihse1@gmail.com
+                            <span class="bold"> Email :</span> noihse1@gmail.com
                         </span>
 
                     </li>
