--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +12,13 @@
     <link rel="icon" href="img/logo-ico.png">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lato|Lobster|Open+Sans+Condensed:300|Playfair+Display" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
 
     <link rel="stylesheet" href="js/animate.css">
 </head>
 
 <body>
-    <!-- <div id="loader"></div> -->
     <!-- Header -->
     <nav>
         <h1 class="brand animate fadeInLeft">NOIHSE</h1>
@@ -79,6 +80,12 @@
             </div>
         </div>
     </div>
+    <!-- Nos mission -->
+    <div class="mission-section">
+        <h2 class="rouge">Nos missions</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam asperiores quibusdam ducimus dolores illum autem
+            reiciendis voluptate odit quam sed dolorem, saepe vel sequi itaque cupiditate ullam, provident repellat voluptatum.</p>
+    </div>
     <!-- Contact -->
     <div class="contact-section animated fadeInDownBig" id="contact">
 
@@ -90,10 +97,11 @@
                     <li>
                         <i class="rouge fa fa-map-marker-alt"></i>
                         <span class="next-icon">
-                            <span class="bold">Addresse    :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie St Viateur
+                            <span class="bold">Addresse :</span> Cocody Palmeraie Bessikoi, <br/> Non loin de la pharmacie
+                            St Viateur
                         </span>
                     </li>
-                        <br>
+                    <br>
                     <li>
                         <i class="rouge fa fa-address-card"></i>
                         <span class="next-icon">
@@ -101,18 +109,18 @@
                         </span>
 
                     </li>
-                        <br>
+                    <br>
                     <li>
                         <i class=" rouge fa fa-phone"></i>
                         <span class="next-icon">
                             <span class="bold"> Fixe :</span> 22 46 76 49
                         </span>
                     </li>
-                        <br>
+                    <br>
                     <li>
                         <i class="rouge fa fa-envelope"></i>
                         <span class="next-icon">
-                            <span class="bold"> Email     :</span> noihse1@gmail.com
+                            <span class="bold"> Email :</span> noihse1@gmail.com
                         </span>
 
                     </li>
