--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             reiciendis voluptate odit quam sed dolorem, saepe vel sequi itaque cupiditate ullam, provident repellat voluptatum.</p>
     </div>
     <!-- Contact -->
-    <div class="contact-section animated fadeInDownBig" id="contact">
+    <div class="contact-section animated fadeInLeft" id="contact">
 
 
         <div class="container-contact animated fadeIn">
