--- a/about.html
+++ b/about.html
@@ -10,9 +10,12 @@
     <title>NOIHSE | Bienvenue</title>
 
     <link rel="icon" href="img/logo-ico.png">
-
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lato|Lobster|Open+Sans+Condensed:300|Playfair+Display" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/slider.css">
     <script src="js/slider.js"></script>
@@ -30,70 +33,51 @@
     <!-- Header -->
     <nav>
         <h1 class="brand animate fadeInLeft">NOIHSE</h1>
-        <ul class="animate fadeInRight">
-            <li><a href="index.html" style="color:red;">Accueil</a></li>
+        <ul class="animate fadeInTop">
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="about.html">A propos</a></li>
+            <li><a href="about.html" style="color:red;">A propos</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <!-- Showcase -->
-    <div class="showcase">
-        <div class="slides-wrapper">
-            <div class="slide" id="slide1">
-                <div class="slide-overlay">
-                    <div class="caption animate fadeInDown">
-                        <div class="caption-overlay">
-                            <h1 class="rouge">Création Visuelle</h1>
-                            <p>
-                                Passez vos messages et informations sur des affiches, flyers dans le format de votre souhait en quantité illimitée
-                            </p>
-                            <a href="#pack1" class="caption-link">
-                                Voir plus
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="slide" id="slide2">
-                <div class="slide-overlay">
-                    <div class="caption animate fadeInDown">
-                        <h1 class="rouge">Développement Web</h1>
-                        <p>
-                            Faites connaitre votre entreprise et Elargissez votre portée à l'international avec des sites web dynamiques et attrayants
-                            !
-                        </p>
-                        <a href="#pack3" class="caption-link">
-                            En savoir plus
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="slide" id="slide3">
-                <div class="slide-overlay">
-                    <div class="caption animate fadeInDown">
-                        <h1 class="rouge">Hygiène et Sécurité Environnement</h1>
-                        <p>
-                            Redonnez à votre environnement son éclat, nous vous proposons un service de nettoyage et entretien de qualité ! Besoin d'un
-                            nettoyage rapide et efficace de vos locaux ?
-                        </p>
-                        <a href="#pack4" class="caption-link">
-                            Conatactez-nous !
-                        </a>
-                    </div>
-                </div>
-            </div>
+    <!-- Nos mission -->
+    <!-- Qui sommes-nous -->
+    <div class="container">
+        <h5 class="header">Découvrez l'entreprise</h5>
+        <p>NOIHSE (Nouvelle Organisation Industrielle en Hygiène Sécurité et Environnement) est une société spécialisée dans
+            les domaines du <span>Nettoyage et Entretien industriel</span> et de la <span>Conception Visuelle</span></p>
+        <p>La compétence, le professionnalisme, la rigueur et le sérieux de ses dirigeants est ce qui caractérise le mieux
+            l'entreprise. Car tous sont issus d'une formation de qualiticien</p>
+    </div>
+    <div class="container">
+        <div class="contained">
+            NOIHSE Entretien et nettoyage Industriel Qui pourrait parler de nettoyage sans avoir de notions en qualité. Nous avons des
+            connaissance des normes ISO 90001, OHSAS 18001, ISO 14001, ISO 22000. Ces connaissances sont des pérogatives
+            pour garantir un nivea d'hygiène et de sécurité satisfaisant à votre structure. Les exigences de ses normes étant
+            connues nous vous garantissons un standard. Le programme de nettoyage et désinfection de l'entreprise vise à
+            ce que le sol, les murs, les plafonds, les vitres, l'ambiance des salles de travail, le matériel et les appareils
+            utilisés pour le travail soient maintenus en bon état de propreté. Un environnement propre évite de constituer
+            une source de contammination pour le personnel et le client. Une main d'oeuvre qualifiée et professionnelle est
+            l'atout de notre équipe.
+        </div>
+        <p>
+            Pour notre entreprise, il est important de pouvoir apporter une pleine et entière satisfaction dans les prestations effectuées.
+            Elle propose ses services dans le but de satisfaire les besoins spécifiques des entreprises du secteur industriel
+            ou tertiaire, des collectivités, des administrations et des particuliers dans le cadre de contrats ou de prestations
+            ponctuelles, en apportant des solutions techniques, efficaces et sûres pour entretenir et préserver leur capital
+            immobilier. Ainsi notre activité s'étend sur l'entretien général, la dératisation, la désinsectisation, le nettoyage
+            en hauteur et le nettoyage des surfaces.
+        </p>
+        <div class="contained">
+
         </div>
     </div>
-    <!-- Nos mission -->
     <div class="mission-section">
-        <div class="container">
-            <h2 class="rouge">Notre Mission</h2>
-            <p>Pour notre entreprise, il est important de pouvoir apporter une pleine et entière satisfaction dans les prestations
-                effectuées.
-            </p>
-        </div>
-
+        <h2 class="rouge">Nos missions</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam asperiores quibusdam ducimus dolores illum autem reiciendis
+            voluptate odit quam sed dolorem, saepe vel sequi itaque cupiditate ullam, provident repellat voluptatum.
+        </p>
         <p>
             NOIHSE est spécialisée dans les domaines : - de la conception visuelle des mesures de sensibilisations en hygiène, sécurité
             et environnement - de l’entretien de toutes surfaces et surtout une maitrise de l’entretien en industrie agro-alimentaire
@@ -106,10 +90,14 @@
             salutations distinguées.
 
         </p>
-        <div class="container">
-            <button>
-                Découvrez nos services
-            </button>
+    </div>
+    <!-- Partenaires slider -->
+    <div class="container">
+        <h5 class="header">Ils nous font confiance</h5>
+        <div class="wrapper">
+            Société Cajou des savanes CASA Bouaké Bolloré Africa Logistique San Pedro NOSACC /SIVECCO/ San Pedro OLAM Cocoa Processing
+            San Pedro FORAGRI San Pedro AWAHUS SERVICE San Pedro
+
         </div>
     </div>
     <!-- Contact -->
