--- a/services.html
+++ b/services.html
@@ -18,68 +18,22 @@
 </head>
 
 <body>
+    <div class="warning">
+        <p>
+            <i class="fa fa-tools"></i>
+            PAGE EN MAINTENANCE
+        </p>
+    </div>
     <!-- Header -->
     <nav>
         <h1 class="brand animate fadeInLeft">NOIHSE</h1>
         <ul class="animate fadeInRight">
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="services.html" class="active">Services</a></li>
+            <li><a href="services.html" style="color:red;">Services</a></li>
             <li><a href="about.html">A propos</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <!-- Showcase -->
-    <div class="showcase">
-        <div class="slides-wrapper">
-            <div class="slide" id="slide1">
-                <div class="slide-overlay">
-                    <div class="caption animate fadeInDown">
-                        <div class="caption-overlay">
-                            <h1 class="rouge">Création Visuelle</h1>
-                            <p>
-                                Passez vos messages et informations sur des affiches, flyers dans le format de votre souhait en quantité illimitée
-                            </p>
-                            <a href="#pack1" class="caption-link">
-                                Voir plus
-                            </a>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="slide" id="slide2">
-                <div class="slide-overlay">
-                    <div class="caption animate fadeInDown">
-                        <h1 class="rouge">Développement Web</h1>
-                        <p>
-                            Faites connaitre votre entreprise et Elargissez votre portée à l'international avec des sites web dynamiques et attrayants
-                            !
-                        </p>
-                        <a href="#pack3" class="caption-link">
-                            En savoir plus
-                        </a>
-                    </div>
-                </div>
-
-            </div>
-            <div class="slide" id="slide3">
-                <div class="slide-overlay">
-                    <div class="caption animate fadeInDown">
-                        <h1 class="rouge">Hygiène et Sécurité Environnement</h1>
-                        <p>
-                            Redonnez à votre environnement son éclat, nous vous proposons un service de nettoyage et entretien de qualité ! Besoin d'un
-                            nettoyage rapide et efficace de vos locaux ?
-                        </p>
-                        <a href="#pack4" class="caption-link">
-                            Conatactez-nous !
-                        </a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
     <!--  -->
 
     <!-- Services -->
