--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <div class="warning">
         <p>
             <i class="fa fa-tools"></i>
-            PAGE EN MAINTENANCE
+            SITE EN MAINTENANCE
         </p>
     </div>
     <!-- Header -->
