--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <div class="warning">
         <p>
             <i class="fa fa-tools"></i>
-            PAGE EN MAINTENANCE
+            SITE EN MAINTENANCE
         </p>
     </div>
     <!-- Header -->
